# cockpit-ntop

./: .gitignore  .gitmodules  Makefile.in  README.md  configure  configure.in  index.html  install.sh  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
branding/: branding.css
cockpit-navigator/: README.md
cockpit-navigator/navigator/: index.html
cockpit-navigator/navigator/components/: NavWindow.js
doc/: conf.py  conf.py.in  index.rst  installation.rst  introduction.rst
doc/usage/: admin.rst  applications.rst  index.rst  licenses.rst  notificaitons.rst  nxn.rst  ssl.rst  system.rst
plugins/cento/: manifest.json  manifest.json.in
plugins/cluster/: manifest.json  manifest.json.in
plugins/n2disk/: manifest.json  manifest.json.in
plugins/nbox-preferences/: manifest.json  manifest.json.in
plugins/nboxui-preferences/: manifest.json  manifest.json.in
plugins/nprobe/: manifest.json  manifest.json.in
plugins/ntopng/: manifest.json  manifest.json.in
src/: App.vue  functions.js  main.js  tasks.js
src/assets/: main.css
src/components/: Cento.vue  CentoConf.vue  Cluster.vue  ClusterConf.vue  LicenseConf.vue  Modal.vue  N2disk.vue  N2diskConf.vue  N2diskExtract.vue  NotificationsConf.vue  Nprobe.vue  NprobeConf.vue  Ntopng.vue  NtopngConf.vue  Preferences.vue  TSChart.vue  TagInput.vue
system/etc/snmp/: snmpd.conf.nbox
system/etc/systemd/system/: nbox-rrd.service  nbox-scheduler.service
system/etc/systemd/system/cluster@.service.d/: nbox.conf
system/usr/share/nbox/script/: nbox-rrd-read.js  nbox-rrd-store.js
system/usr/share/nbox/scripts/: nbox-notify.js  nbox-rrd-read.js  nbox-rrd-store.js  nbox-scheduler.js
